--- a/src/components/Asesoria.css
+++ b/src/components/Asesoria.css
@@ -106,6 +106,7 @@
     margin-top: 0;
     background: linear-gradient(45deg, #1F1CA9 0%, #BF3378 100%);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     display: flex;
     justify-content: center;
