--- a/src/components/Inicio.css
+++ b/src/components/Inicio.css
@@ -7,6 +7,7 @@
   gap: 30px;
   flex-direction: row;
   height: 100vh;
+  min-height: fit-content;
 }
 
 
@@ -64,6 +65,7 @@
   .inicio-container {
     flex-direction: column;
     align-items: center;
+    margin-bottom: 1em;
   }
 
   .inicio-title-container,
@@ -95,7 +97,7 @@
     height: auto;
   }
     .inicio-image-container {
-        width: 40%;
+        width: 60%;
         margin-top: 20px;
     }
 }
